Image corrections on mobile

--- a/assets/css/pokemons.css
+++ b/assets/css/pokemons.css
@@ -144,6 +144,9 @@
      .pokemons {
           grid-template-columns: 1fr 1fr;
      }
+     .pokemon .detail img{
+          height: 42px;
+     }
 }
 @media screen and (min-width:576px) {
      .pokemons {
